# perfect-rust

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  rust-clippy.yml
.github/workflows/: rust.yml
.resource/: license_header
examples/: Makefile.toml
examples/dotenv_parser_sample/: Cargo.toml
examples/dotenv_parser_sample/src/: main.rs
examples/iriam-profile/src/: main.rs
examples/l02_operator/: Cargo.toml
examples/l02_operator/src/: main.rs
examples/l03_variable/: Cargo.toml
examples/l03_variable/src/: main.rs
examples/l04_basic_data_type/: Cargo.toml
examples/l04_basic_data_type/src/: basic_type.rs  data_type.rs  lib.rs  pointer_type.rs  slice.rs  str_type.rs
examples/l05_control_formula/: Cargo.toml  Makefile.toml
examples/l05_control_formula/src/: branch_if.rs  branch_match.rs  lib.rs  repet_for.rs  repet_loop.rs  repet_while.rs
examples/l06_library_data_type/: Cargo.toml
examples/l06_library_data_type/src/: box_type.rs  date_time_type.rs  hash_map_type.rs  hash_set_type.rs  lib.rs  linked_list_type.rs  string_type.rs  vec_type.rs
examples/l07_function/: Cargo.toml
examples/l07_function/src/: basic_function.rs  closure.rs  function_type.rs  generics.rs  lib.rs  life_time.rs  main.rs  option_type.rs  ownership.rs  reference.rs  result_type.rs
examples/l08_struct/: Cargo.toml
examples/l08_struct/src/: border.rs  constrant.rs  generics.rs  lib.rs  member.rs  name_field_type.rs  tuple_unit_type.rs  utility_trait.rs
examples/l09_enum/: Cargo.toml
examples/l09_enum/src/: basic.rs  generics.rs  lib.rs  struct_type.rs  tuple_type.rs
examples/l10_trait/: Cargo.toml  README.md
examples/l10_trait/resources/: number.csv  products.csv  products.json
examples/l10_trait/src/: basic.rs  lib.rs  main.rs  sub_trait.rs
examples/l10_trait/src/assosiation/: entities.rs  mod.rs  traits.rs  traits_impl.rs  try_out.rs
examples/l10_trait/src/generics/: mod.rs  service.rs  traits.rs  traits_impl.rs  try_out.rs
examples/reqwest-example/: Cargo.toml
examples/reqwest_example/: Cargo.toml
examples/tools/: Cargo.toml  README.md
iriam-profile/: Cargo.toml  Makefile.toml  README.md
iriam-profile/src/: main.rs
iriam_profile/: Cargo.toml
iriam_profile/src/: main.rs
my-rust-version-hello-world/: Cargo.toml  README.md
my-rust-version-hello-world/src/: main.rs
my_rust_version_hello_world/: Cargo.toml
my_rust_version_hello_world/src/: main.rs
practice-collection/error/: Cargo.toml  README.md
practice-collection/error/src/: anyhow.rs  basic.rs  lib.rs  original_error.rs  panic.rs  this_error.rs
practice-collection/testing/src/: target.rs
practice-collection/thread_and_async/: Cargo.toml  README.md
practice-collection/thread_and_async/src/: basic.rs  cross_beam.rs  lib.rs
practice_collection/axum_web_framework/: Cargo.toml
practice_collection/axum_web_framework/src/: main.rs
practice_collection/error/: Cargo.toml
practice_collection/error/src/: lib.rs  original_error.rs  panic.rs  this_error.rs
practice_collection/external_crate_use/: Cargo.toml  README.md
practice_collection/external_crate_use/src/: main.rs
practice_collection/mongodatabase/: Cargo.toml  READNE.md
practice_collection/mongodatabase/src/: connect.rs  entites.rs  lib.rs  product_repository.rs  repository.rs
practice_collection/or_mapper/: Cargo.toml  READNE.md
practice_collection/or_mapper/sql/: create_table.sql  insert.sql  select.sql
practice_collection/or_mapper/src/: lib.rs  pool.rs  product_category_repository.rs  product_repository.rs  repository.rs
practice_collection/or_mapper/src/modules/: mod.rs  prelude.rs  product.rs  product_category.rs
practice_collection/postgres/: Cargo.toml  README.md
practice_collection/postgres/sql/: create_table.sql
practice_collection/postgres/src/: connect.rs  entities.rs  lib.rs  manager.rs  params.rs  pool_1.rs  pool_2.rs  product_category_repository.rs  product_repository.rs  repository.rs  tokio_connect.rs  tokio_product_repository.rs  transaction.rs
practice_collection/postgresql/: Cargo.toml  README.md
practice_collection/postgresql/resources/: sql.yaml
practice_collection/postgresql/sql/: create_table.sql
practice_collection/postgresql/src/: connect.rs  entities.rs  lib.rs  params.rs  pool_1.rs  pool_2.rs  product_category_repository.rs  product_repository.rs  repository.rs  sql.rs  tokio_connect.rs  tokio_product_repository.rs  tokio_repository.rs  tokio_transaction.rs
practice_collection/testing/: Cargo.toml  README.md
practice_collection/testing/src/: document_test.rs  lib.rs  simple_test_case.rs  target.rs
practice_collection/testing/tests/: test_module.rs
practice_collection/testing/tests/simple_test_case/: simple_test_case.rs
practice_collection/thread_and_async/: Cargo.toml  README.md
practice_collection/thread_and_async/resources/: type_t.csv  type_t.json
practice_collection/thread_and_async/src/: cross_beam.rs  exclusive_mutex.rs  exclusive_rwlock.rs  exclusive_shradelock.rs  lib.rs  main.rs  messaging_crossbeam.rs  messaging_std.rs
practice_collection/thread_and_async/src/task/: client.rs  customer.rs  mod.rs  task_controller.rs  writer.rs
practice_collection/web_framework/: Cargo.toml  Dockerfile  READNE.md  compose.yaml
practice_collection/web_framework/src/: main.rs
practice_collection/web_framework/src/handlers/: handler_func.rs  mod.rs  tera_handler.rs
practice_collection/web_framework/views/pages/: layout.html  result.html
practice_collection/youtube_to_mp3/: Cargo.toml
practice_collection/youtube_to_mp3/src/: main.rs
src/: basic_type.rs  main.rs
