#[package]
#name = "perfect-rust"
#version = "0.1.0"
#edition = "2021"
#include = ["src/**/*", "README.md"]
#readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "examples/*",
    "iriam-profile/"
    ]

#[dependencies]