#[package]
#name = "perfect-rust"
#version = "0.1.0"
#edition = "2021"
#include = ["src/**/*", "README.md"]
#readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "examples/*",
    "practice_collection/*",
    "iriam_profile/"
    ]

#[dependencies]