#[package]
#name = "perfect-rust"
#version = "0.1.0"
#edition = "2021"
#include = ["src/**/*", "README.md"]
#readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "examples/*",
    "practice_collection/*",
    "iriam_profile/",
    "my-rust-version-hello-world/"
    ]

#[dependencies]