[package]
name = "my-rust-version-hello-world"
version = "0.1.1"
edition = "2021"

readme = "README.md"
keywords = ["hello-world", "rust-lang", "beginer"]
license = "MIT"
homepage = "https://github.com/friendbear/perfect-rust"
repository = "https://github.com/friendbear/perfect-rust/my-rust-version-hello-world"
description = "Rust Lang version hello world starting here."
rust-version = "1.74.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
