[package]
name = "my_rust_version_hello_world"
version = "0.1.1"
edition = "2021"

readme = "README.md"
keywords = ["hello-world", "rust-lang"]
license = "MIT"
homepage = "https://github.com/friendbear/perfect-rust"
repository = "https://github.com/friendbear/perfect-rust/my_rust_version_hello_world"
description = ""
rust-version = "1.74.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
