[package]
name = "dotenv_parser_sample"
version = "0.1.0"
edition = "2021"
readme = "README.md"
keywords = ["dotenv", "env", "environment", "settings", "config"]
license = "MIT"
homepage = "https://github.com/frendbear/perfect-rust"
repository = "https://github.com/friendbear/perfect-rust/examples/dotenv_perser_sample"
description = "A macro for compile time dotenv inspection"
rust-version = "1.74.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.11", features = ["derive", "env"] }
dotenvy = { version = "0.15.7", features = ["clap", "cli"] }
dotenvy_macro = "0.15.7"
