[package]
name = "l10_trait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
csv = "1.3.1"
#serde = "1.0.183"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.137"
#generics = { path = "../../" }