[package]
name = "mongodatabase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.80"
bson = "2.7.0"
futures-util = "0.3.29"
lombok = "0.4.0"
mongodb = "2.7.0"
proc-macro2 = "1.0.86"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
