[package]
name = "mongodatabase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.82"
bson = "2.7.0"
futures-util = "0.3.30"
lombok = "0.4.0"
mongodb = "3.1.1"
proc-macro2 = "1.0.93"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
