[package]
name = "or_mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.1"
log = "0.4.22"
lombok = "0.4.0"
proc-macro2 = "1.0.86"

sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", default-features = false, features = ["alloc"] }
tokio = { version = "1.38.1", features = ["full"] }
