[package]
name = "or_mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.82"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.1"
log = "0.4.22"
lombok = "0.4.0"
proc-macro2 = "1.0.93"

sea-orm = { version = "1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.137", default-features = false, features = ["alloc"] }
tokio = { version = "1.43.0", features = ["full"] }
