[package]
name = "postgresql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lombok = "0.4.0"
once_cell = "1.18.0"


postgres = "0.19.7"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"

tokio ={ version = "1.24.1", features = ["full"] }
tokio-postgres = "0.7.1"
proc-macro2 = "1.0.69"
async-trait = "0.1.61"
yaml-rust = "0.4.5"
