[package]
name = "postgresql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
lombok = "0.4.0"
once_cell = "1.19.0"


postgres = "0.19.9"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.2"

tokio ={ version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.1"
proc-macro2 = "1.0.93"
async-trait = "0.1.82"
yaml-rust = "0.4.5"
