[package]
name = "thread_and_async"
version = "0.1.0"
edition = "2021"
default-run = "thread_and_async"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8.4"
anyhow = "1.0.89"
async-std = { version = "1.13.0", features = ["attributes", "unstable"] }
num-traits = "0.2.19"
csv = "1.3.0"
