[package]
name = "web_framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.4.0"
actix-web = "4.4.0"
anyhow = "1.0.75"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
mime = "0.3.17"
serde = { version = "1.0.193", features = ["derive"] }
tera = "1.19.1"
