[package]
name = "youtube_to_mp3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "youtube_to_mp3"
src = "bin/youtube_to_mp3.rs"

[dependencies]
google-youtube3 = "2.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
hyper = "0.14"
hyper-rustls = "0.26"
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
serde = "1.0.204"
configparser = "3.1.0"
