[package]
name = "youtube_to_mp3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "youtube_to_mp3"
src = "bin/youtube_to_mp3.rs"

[dependencies]
google-youtube3 = "6.0.0+20240626"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
hyper = "1.4"
hyper-rustls = "0.27"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
configparser = "3.1.0"
regex = "1.11.1"
